crates/retiretui/src/commands/tui/snapshots/retiretui__commands__tui__frames__historical_128x32.snap
---
source: crates/retiretui/src/commands/tui/frames.rs
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                              
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                  full.toml ● 
┴──────────┴┴────────┴┴─────────┴╯       ╰┴──────┴──────────────────────────────────────────────────────────────────────────────
╭ Tools ────────────╮╭ Assumptions ───────────────────╮╭ Start Years · survived 132 of 155 ────────────────────────────────────╮
│  Roth Conversions ││                                ││  Start Years Ends with  Short in                                     ▲│
│  SSA Benefits     ││▌ Survived  132 of 155          ││  As planned      2.09M     never                                     █│
│  Monte Carlo      ││  Success   Never short         ││▏ 1968                0 2055 (80)                                     ║│
│▏ Historical       ││  Years     1871–2025, wrapped  ││  1969                0 2055 (80)                                     ║│
│                   ││  No mix    cash, brokerage, fi ││  1967                0 2055 (80)                                     ║│
│                   ││                                ││  1966                0 2055 (80)                                     ║│
│                   ││                                ││  1970                0 2055 (80)                                     ║│
│                   ││                                ││  1965                0 2056 (81)                                     ▼│
│                   ││                                │╰───────────────────────────────────────────────────────────────────────╯
│                   ││                                │╭ Net Worth · 1968 ─────────────────────────────────────────────────────╮
│                   ││                                ││9.91M│                                                           ┌────┐│
│                   ││                                ││     │                                                 ░░░░░░░░░░│1968││
│                   ││                                ││     │                                             ░░░░░░░░░░░░░░└────┘│
│                   ││                                ││     │                                          ░░░░░░░░░░░░░░░░░░░░░░░│
│                   ││                                ││     │                                       ░░░░░░░░░░░░░░░░░░░░░░░░░░│
│                   ││                                ││     │                                  ░░░░░░░░░░░░░░░░░░░░░░░░░░▒▒▒▒▒│
│                   ││                                ││     │                          ░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒│
│                   ││                                ││     │                    ░░░░░░░░░░░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒│
│                   ││                                ││     │             ░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒│
│                   ││                                ││     │        ░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒│
│                   ││                                ││     │  ░▒▒▒▒▒▒▒▒▒⣀⣀⡀▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒│
│                   ││                                ││     │⠤⠒⠒⠒⠒⠉⠉⠉⠉⠉⠉⠉  ⠈⠉⠒⠤⠤⠤⣀⣀⡀░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒│
│                   ││                                ││0    │                      ⠈⠉⠉⠒⠒⠒⠒⠒⠢⠤⠤⠤⠤⠤⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀│
│                   ││                                ││     └─────────────────────────────────────────────────────────────────│
│                   ││                                ││  2026                              2050                           2074│
│                   │╰────────────────────────────────╯╰───────────────────────────────────────────────────────────────────────╯
╰───────────────────╯Each year of the record as the plan's first, its markets and inflation as they came. Today's dollars.      
 ↑↓ assumption  ⏎ edit  ⇥ pane  v view  ctrl-s save  r reload  q quit  ctrl-↓ tab  n toggle dollars          : commands  ? help
